--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,5 +9,4 @@ build_pdf:
     - pdflatex -output-directory=out main.tex
   artifacts:
     paths:
-      - public/*.pdf
-      # - out/*.pdf
+      - out/*.pdf
